--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "@react-navigation/native-stack": "^6.2.5",
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.0",
+    "expo-cli": "^4.12.10",
     "expo-status-bar": "~1.1.0",
-    "firebase": "^8.2.3",
+    "firebase": "^8.10.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
