--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.0",
     "expo-cli": "^4.12.10",
+    "expo-image-picker": "^11.0.3",
     "expo-status-bar": "~1.1.0",
-    "firebase": "^8.10.0",
+    "firebase": "^8.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.2",
+    "react-native-multiple-choice-picker": "^1.0.6",
+    "react-native-selectmultiple-button": "^0.1.105",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
